Release Notes
~~~~~~~~~~~~~
Release 0.4.17 - 
    
Release 0.4.16 - July 7, 2003
  * Checks TLS certificates.  See wmbiffrc(5) for 
    details on the certfile option.  Designed to work
    with mutt.
  * Show a busy mouse cursor while talking to remote
    servers, to show that wmbiff won't be responsive 
    to mouse clicks for a little bit.
  * New buttontwo (middle click) action to complement 
    action (left mouse click) and fetchcmd (right mouse).
  * #'s are now only comments in .wmbiffrc at the 
    beginning of lines or following whitespace, 
    allowing #'s in (most) passwords.
  * AppleScript examples for driving Apple's Mail 
    application in sample.wmbiffrc
  * Special mailbox action 'msglst' brings up a 
    transient window showing message headers from IMAP
    and program output for shell methods.  This is 
    intended to be faster than starting up a new 
    mail program or re-executing a script.
  * Avoid repetitive error messages when disconnected.
  * Use conventional -geometry option handling.
  * Fix bug in 0.4.15 to re-enable *'s in IMAP passwords.

Release 0.4.15 - Mar 30, 2003
  * Frobnicate internally stored passwords, partially 
    obfuscating them in memory.  Not actually more 
    secure, but harder to casually discover a password.
  * Tighten configuration file lines to more quickly
    detect misconfiguration.  Add the -relax option if
    it is too paranoid.
  * Add support for -bg to round out -hi and -fg color
    specifiers.

Release 0.4.14 - Jan 24, 2003
  * Handle building on systems with both posix and gnu
    regex in different but conflicting files.  
  * Restart wmbiff on SIGUSR1.  You may need to use 
    'killall -USR1 wmbiff' if it gets stuck.
  * Restart wmbiff on ctrl-shift mouse 1.

Release 0.4.13 - Jan 20, 2003
  * Fix a file descriptor leak when using 
    both Shell and IMAP clients.
  * Portability to Mac OS X, Solaris, and probably BSD
    restored (thanks sourceforge compile farm!) with a