@@ -1,6 +1,8 @@
 Release Notes
 ~~~~~~~~~~~~~
 Release 0.4.17 - 
+  * On Mac, ask the keychain for passwords if 
+    askpass = internal:apple:keychain
     
 Release 0.4.16 - July 7, 2003
   * Checks TLS certificates.  See wmbiffrc(5) for 
@@ -438,4 +440,4 @@ Release 0.1 - Wed, 17 Nov 1999 00:00:00 +0000
   * Initial release by Gennady Belyakov <gb@ccat.elect.ru>.
 
 
-$Id: NEWS,v 1.47 2003/07/15 08:41:45 bluehal Exp $
+$Id: NEWS,v 1.48 2003/07/19 23:56:32 bluehal Exp $
